--- a/css/estilo.css
+++ b/css/estilo.css
@@ -9,5 +9,35 @@
     justify-content: space-between;
     flex-wrap: wrap;
     align-items: center;
-    background-color: #00000000;
+    background-color: #d9d9d9;
+}
+
+.cabecalho img{
+    display: block;
+    width: 30%;
+    max-width: 30%;
+    
+}
+
+.cabecalho nav{
+    display: flex;
+    justify-content: space-around;
+    width: 60%;
+    height: 100%;
+}
+
+.cabecalho a{
+    text-decoration: none;
+    text-align: center;
+    font-size: 4em;
+    color: blue;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 700;
+    padding: 20% 0;
+}
+
+.cabecalho a:hover{
+    color: white;
+    background-color: #bebebe;
+
 }
